<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Woquban</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	<string name="me">我去办</string>
	<string name="land">登陆</string>
	<string name="share">分享</string>
	<string name="publish">发布</string>
	<string name="salary">报酬</string>
	<string name="time_rest">剩余时间:</string>
	<string name="accept">应征</string>
</resources>