<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="#e8e8e8"
        android:orientation="horizontal"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#dbdbdb"
            android:clickable="true"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/me"
            android:textColor="#178c00"
            android:textSize="27sp" />

        <ImageView
            android:id="@+id/gohead"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#dbdbdb"
            android:clickable="true"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:src="@drawable/gohead" />
    </LinearLayout>

    <ListView
        android:id="@+id/datalist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="4"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:background="#e8e8e8"
        android:orientation="horizontal"
         android:layout_weight="1">

        <TextView
            android:id="@+id/land"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#efefef"
            android:text="@string/land"
            android:textSize="20sp" 
            android:layout_weight="5"
            android:clickable="true"
            android:gravity="center"
             android:textColor="#1e1e1e"/>

        <TextView
            android:id="@+id/publish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#8b8b8b"
            android:text="@string/publish"
            android:textColor="#178c00"
            android:textSize="28sp" 
            android:layout_weight="8"
            android:clickable="true"
            android:gravity="center"/>

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#efefef"
            android:text="@string/share"
            android:textSize="20sp"
            android:layout_weight="5" 
            android:gravity="center"
            android:clickable="true"
             android:textColor="#1e1e1e"/>
    </LinearLayout>

</LinearLayout>