<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_weight="1"
        android:background="#efefef"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/salary"
            android:textColor="#1e1e1e"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="2dp"
            android:text="￥70"
            android:textColor="#fe7200"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4" >

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:textColor="#1e1e1e"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/content"
            android:layout_below="@id/content"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/time_rest"
            android:textColor="#6f6f6f"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/time"
            android:layout_toRightOf="@id/time"
            android:textColor="#6f6f6f"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/accept"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/accept"
        android:textColor="#fe7200"
        android:textSize="12sp" />
</LinearLayout>